--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.show-sql=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=7993064@stud.nau.edu.ua
-spring.mail.password=R1405365r
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
