--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,24 @@
 spring.application.name=Library
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=root
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=root
 
+#spring.datasource.url=jdbc:postgresql://db:5431/library_db
+#spring.datasource.username=postgres
+#spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 
 
 
+
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=7993064@stud.nau.edu.ua
-spring.mail.password=
+spring.mail.password=R1405365r
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
